# xzceb-flask_eng_fr

./: .gitignore  pyproject.toml
final_project/: server.py
final_project/machinetranslation/: __init__.py  translator.py
final_project/machinetranslation/tests/: tests.py
final_project/machinetranslator/: tests.py  translator.py
final_project/machinetranslator/tests/: tests.py
final_project/static/: mywebscript.js
